[gd_scene load_steps=8 format=1]

[ext_resource path="res://src/onscreen_controls.gd" type="Script" id=1]
[ext_resource path="res://data/images/onscreen_controls/circlepad.png" type="Texture" id=2]
[ext_resource path="res://data/images/onscreen_controls/circlepad_stick.png" type="Texture" id=3]
[ext_resource path="res://data/images/onscreen_controls/A.png" type="Texture" id=4]
[ext_resource path="res://data/images/onscreen_controls/B.png" type="Texture" id=5]
[ext_resource path="res://data/images/onscreen_controls/X.png" type="Texture" id=6]
[ext_resource path="res://data/images/onscreen_controls/Y.png" type="Texture" id=7]







[node name="onscreen" type="Control"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
script/script = ExtResource( 1 )

[node name="analog" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1620.0
margin/top = 640.0
margin/right = 1820.0
margin/bottom = 840.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="stick" type="TextureFrame" parent="analog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 50.0
margin/right = 150.0
margin/bottom = 150.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="buttons" type="Control" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 600.0
margin/right = 350.0
margin/bottom = 850.0

[node name="A" type="TouchScreenButton" parent="buttons"]

transform/pos = Vector2( 85, 170 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="B" type="TouchScreenButton" parent="buttons"]

transform/pos = Vector2( 0, 85 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="X" type="TouchScreenButton" parent="buttons"]

transform/pos = Vector2( 85, 0 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[node name="Y" type="TouchScreenButton" parent="buttons"]

transform/pos = Vector2( 170, 85 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
passby_press = false
action = ""
visibility_mode = 0

[connection signal="pressed" from="buttons/A" to="." method="_on_A_pressed"]

[connection signal="released" from="buttons/A" to="." method="_on_A_released"]

[connection signal="pressed" from="buttons/B" to="." method="_on_B_pressed"]

[connection signal="released" from="buttons/B" to="." method="_on_B_released"]

[connection signal="pressed" from="buttons/X" to="." method="_on_X_pressed"]

[connection signal="released" from="buttons/X" to="." method="_on_X_released"]

[connection signal="pressed" from="buttons/Y" to="." method="_on_Y_pressed"]

[connection signal="released" from="buttons/Y" to="." method="_on_Y_released"]


